module/postponed/type_constructor/tests/inc/pair/homo_pair_mismatched_types_test.rs
use type_constructor::prelude::*;

fn main()
{
  types!( pair Bad : i32 );
  Bad( 1, "str" );
}
